Add audio sources

--- a/index.html
+++ b/index.html
@@ -17,30 +17,27 @@
         <article class="button-container">
           <button class="breathing-btn">
             <img src="" alt="Slow Breathing" />
+            <audio src="/src/sounds/breath2Two.mp3"></audio>
           </button>
           <button class="breathing-btn">
             <img src="" alt="Normal Breathing" />
+            <audio src="/src/sounds/breath3and3.mp3"></audio>
           </button>
           <button class="breathing-btn">
             <img src="" alt="Fast Breathing" />
+            <audio src="/src/sounds/breathOneTwoOne.mp3"></audio>
           </button>
           <button class="breathing-btn">
             <img src="" alt="Deep Breathing" />
+            <audio src="/src/sounds/breathOneTwoOne.mp3"></audio>
           </button>
           <button class="breathing-btn">
             <img src="" alt="Relaxation Breathing" />
+            <audio src="/src/sounds/breathTwoThre.mp3"></audio>
           </button>
           <button class="breathing-btn">
             <img src="" alt="Custom Breathing" />
-          </button>
-          <button class="breathing-btn">
-            <img src="" alt="Deep Breathing" />
-          </button>
-          <button class="breathing-btn">
-            <img src="" alt="Relaxation Breathing" />
-          </button>
-          <button class="breathing-btn">
-            <img src="" alt="Custom Breathing" />
+            <audio src="/src/sounds/breath2Two.mp3" controls></audio>
           </button>
         </article>
       </section>
