--- a/index.html
+++ b/index.html
@@ -4,47 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Reproductor de Música</title>
   </head>
   <body>
-    <header>
-      <h1>Breathing Module</h1>
-    </header>
+    <section id="audios" class="btn_container">
+      <div>
+        <audio id="audio1" src="src/sounds/airwindmeditation.mp3"></audio>
+        <button class="play-button">Play</button>
+      </div>
+      <div>
+        <audio id="audio2" src="src/sounds/airwindmeditation.mp3"></audio>
+        <button class="play-button">Play</button>
+      </div>
+      <div>
+        <audio id="audio3" src="src/sounds/airwindmeditation.mp3"></audio>
+        <button class="play-button">Play</button>
+      </div>
+      <div>
+        <audio id="audio4" src="src/sounds/airwindmeditation.mp3"></audio>
+        <button class="play-button">Play</button>
+      </div>
+      <div>
+        <audio id="audio5" src="src/sounds/airwindmeditation.mp3"></audio>
+        <button class="play-button">Play</button>
+      </div>
+      <div>
+        <audio id="audio6" src="src/sounds/airwindmeditation.mp3"></audio>
+        <button class="play-button">Play</button>
+      </div>
+    </section>
 
-    <main>
-      <section>
-        <h2>Choose your breathing pace</h2>
-        <article class="button-container">
-          <button class="breathing-btn">
-            <img src="" alt="Slow Breathing" />
-            <audio src="/src/sounds/breath2Two.mp3"></audio>
-          </button>
-          <button class="breathing-btn">
-            <img src="" alt="Normal Breathing" />
-            <audio src="/src/sounds/breath3and3.mp3"></audio>
-          </button>
-          <button class="breathing-btn">
-            <img src="" alt="Fast Breathing" />
-            <audio src="/src/sounds/breathOneTwoOne.mp3"></audio>
-          </button>
-          <button class="breathing-btn">
-            <img src="" alt="Deep Breathing" />
-            <audio src="/src/sounds/breathOneTwoOne.mp3"></audio>
-          </button>
-          <button class="breathing-btn">
-            <img src="" alt="Relaxation Breathing" />
-            <audio src="/src/sounds/breathTwoThre.mp3"></audio>
-          </button>
-          <button class="breathing-btn">
-            <img src="" alt="Custom Breathing" />
-            <audio src="/src/sounds/breath2Two.mp3" controls></audio>
-          </button>
-        </article>
-      </section>
-    </main>
-
-    <footer>
-      <p>&copy; 2024 Breathing Module. Developed by Thalia Olvera.</p>
-    </footer>
+    <script src="script.js"></script>
   </body>
 </html>
