Fix: Mobile view

--- a/index.html
+++ b/index.html
@@ -8,32 +8,86 @@
   </head>
   <body>
     <section id="audios" class="btn_container">
-      <div>
-        <audio id="audio1" src="src/sounds/airwindmeditation.mp3"></audio>
-        <button class="play-button">Play</button>
-      </div>
-      <div>
-        <audio id="audio2" src="src/sounds/airwindmeditation.mp3"></audio>
-        <button class="play-button">Play</button>
-      </div>
-      <div>
-        <audio id="audio3" src="src/sounds/airwindmeditation.mp3"></audio>
-        <button class="play-button">Play</button>
-      </div>
-      <div>
-        <audio id="audio4" src="src/sounds/airwindmeditation.mp3"></audio>
-        <button class="play-button">Play</button>
-      </div>
-      <div>
-        <audio id="audio5" src="src/sounds/airwindmeditation.mp3"></audio>
-        <button class="play-button">Play</button>
-      </div>
-      <div>
-        <audio id="audio6" src="src/sounds/airwindmeditation.mp3"></audio>
-        <button class="play-button">Play</button>
-      </div>
+      <div class="circle"></div>
+      <article>
+        <audio id="audio1" src="src/sounds/airwindmeditation.mp3" loop></audio>
+        <button class="play-button">
+          <p>Relax 1</p>
+          <p class="playbtn">Play</p>
+        </button>
+      </article>
+      <article>
+        <audio id="audio2" src="src/sounds/reikisounds.mp3" loop></audio>
+        <button class="play-button">
+          <p>Relax 2</p>
+          <p class="playbtn">Play</p>
+        </button>
+      </article>
+      <article>
+        <audio id="audio3" src="src/sounds/binaural.mp3" loop></audio>
+        <button class="play-button">
+          <p>Relax 3</p>
+          <p class="playbtn">Play</p>
+        </button>
+      </article>
+      <article>
+        <audio id="audio4" src="src/sounds/rain.mp3" loop></audio>
+        <button class="play-button">
+          <p>Rain</p>
+          <p class="playbtn">Play</p>
+        </button>
+      </article>
+      <article>
+        <audio id="audio5" src="src/sounds/waves.mp3" loop></audio>
+        <button class="play-button">
+          <p>Waves</p>
+          <p class="playbtn">Play</p>
+        </button>
+      </article>
+      <article>
+        <audio id="audio6" src="src/sounds/BreathInOut.mp3" loop></audio>
+        <button class="play-button">
+          <p>Breathing Guide</p>
+          <p class="playbtn">Play</p>
+        </button>
+      </article>
     </section>
+    <footer>
+      <ul>Sound By:
+        <li>
+          <a
+            href="https://pixabay.com/es/users/gingerleegalaxy_1-31961196/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=220933"
+            >Ginger Guillot</a
 
+        </li>
+        <li>
+          <a
+        href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=220933"
+        ></a
+        </li>
+        <li>
+          <a
+          href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=220933"
+          ></a
+        </li>
+        <li>
+          <a
+          href="https://pixabay.com/es/users/kokoreli777-39793239/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=169411"
+          >michael koreli</a
+        </li>
+        <li>
+          <a
+          href="https://pixabay.com/sound-effects/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=76401"
+          ></a
+        </li>
+        <li>
+          <a
+          href="https://pixabay.com/sound-effects//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=169411"
+          >From: Pixabay</a
+        </li>
+     
+      </ul>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
