--- a/index.html
+++ b/index.html
@@ -4,88 +4,68 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Reproductor de Música</title>
+    <title>Modulos de Respiración</title>
   </head>
   <body>
-    <section id="audios" class="btn_container">
-      <div class="circle"></div>
-      <article>
-        <audio id="audio1" src="src/sounds/airwindmeditation.mp3" loop></audio>
-        <button class="play-button">
-          <p>Relax 1</p>
-          <p class="playbtn">Play</p>
-        </button>
-      </article>
-      <article>
-        <audio id="audio2" src="src/sounds/reikisounds.mp3" loop></audio>
-        <button class="play-button">
-          <p>Relax 2</p>
-          <p class="playbtn">Play</p>
-        </button>
-      </article>
-      <article>
-        <audio id="audio3" src="src/sounds/binaural.mp3" loop></audio>
-        <button class="play-button">
-          <p>Relax 3</p>
-          <p class="playbtn">Play</p>
-        </button>
-      </article>
-      <article>
-        <audio id="audio4" src="src/sounds/rain.mp3" loop></audio>
-        <button class="play-button">
-          <p>Rain</p>
-          <p class="playbtn">Play</p>
-        </button>
-      </article>
-      <article>
-        <audio id="audio5" src="src/sounds/waves.mp3" loop></audio>
-        <button class="play-button">
-          <p>Waves</p>
-          <p class="playbtn">Play</p>
-        </button>
-      </article>
-      <article>
-        <audio id="audio6" src="src/sounds/BreathInOut.mp3" loop></audio>
-        <button class="play-button">
-          <p>Breathing Guide</p>
-          <p class="playbtn">Play</p>
-        </button>
-      </article>
-    </section>
-    <footer>
-      <ul>Sound By:
-        <li>
-          <a
-            href="https://pixabay.com/es/users/gingerleegalaxy_1-31961196/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=220933"
-            >Ginger Guillot</a
+    <main>
+      <div class="circle" aria-label="Circle expansion">
+        <p id="inhaleText" aria-label="Inhale">Inhale</p>
+        <p id="holdText" aria-label="Hold">Hold</p>
+        <p id="exhaleText" aria-label="Exhale">Exhale</p>
+      </div>
+      <section id="audios" class="btn_container">
+        <article>
+          <audio
+            id="audio1"
+            src="src/sounds/airwindmeditation.mp3"
+            loop
+          ></audio>
+          <button class="play-button">
+            <p>Relax 1</p>
+            <p class="playbtn">Play</p>
+          </button>
+        </article>
+        <article>
+          <audio id="audio2" src="src/sounds/reikisounds.mp3" loop></audio>
+          <button class="play-button">
+            <p>Relax 2</p>
+            <p class="playbtn">Play</p>
+          </button>
+        </article>
+        <article>
+          <audio id="audio3" src="src/sounds/binaural.mp3" loop></audio>
+          <button class="play-button">
+            <p>Relax 3</p>
+            <p class="playbtn">Play</p>
+          </button>
+        </article>
+        <article>
+          <audio id="audio4" src="src/sounds/rain.mp3" loop></audio>
+          <button class="play-button">
+            <p>Rain</p>
+            <p class="playbtn">Play</p>
+          </button>
+        </article>
+        <article>
+          <audio id="audio5" src="src/sounds/waves.mp3" loop></audio>
+          <button class="play-button">
+            <p>Waves</p>
+            <p class="playbtn">Play</p>
+          </button>
+        </article>
+        <article>
+          <audio id="audio6" src="src/sounds/BreathInOut.mp3" loop></audio>
+          <button class="play-button">
+            <p>Breathing Guide</p>
+            <p class="playbtn">Play</p>
+          </button>
+        </article>
+      </section>
+    </main>
 
-        </li>
-        <li>
-          <a
-        href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=220933"
-        ></a
-        </li>
-        <li>
-          <a
-          href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=220933"
-          ></a
-        </li>
-        <li>
-          <a
-          href="https://pixabay.com/es/users/kokoreli777-39793239/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=169411"
-          >michael koreli</a
-        </li>
-        <li>
-          <a
-          href="https://pixabay.com/sound-effects/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=76401"
-          ></a
-        </li>
-        <li>
-          <a
-          href="https://pixabay.com/sound-effects//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=169411"
-          >From: Pixabay</a
-        </li>
-     
+    <footer>
+      <ul class="autor">
+        <li>Developed by Thalia Olvera 2024</li>
       </ul>
     </footer>
     <script src="script.js"></script>
