Add: modal function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Modulos de Respiración</title>
   </head>
   <body>
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <div class="cancel-container">
+          <img
+            class="cancel-container--btn"
+            src="src/img/cancel.png"
+            alt="Cancel Icon"
+          />
+        </div>
+        <p>
+          Para disfrutar mejor de la experiencia, te recomendamos usar
+          audífonos.
+        </p>
+        <div>
+          <img
+            class="headphonesIcon"
+            src="src/img/headphones.png"
+            alt="headphones ico "
+          />
+        </div>
+      </div>
+    </div>
     <main>
       <div class="circle" aria-label="Circle expansion">
         <p id="inhaleText" aria-label="Inhale">Inhale</p>
@@ -21,42 +43,42 @@
             loop
           ></audio>
           <button class="play-button">
-            <p>Relax 1</p>
+            <p>Meditation One</p>
             <p class="playbtn">Play</p>
           </button>
         </article>
         <article>
           <audio id="audio2" src="src/sounds/reikisounds.mp3" loop></audio>
           <button class="play-button">
-            <p>Relax 2</p>
+            <p>Reiki Sound</p>
             <p class="playbtn">Play</p>
           </button>
         </article>
         <article>
           <audio id="audio3" src="src/sounds/binaural.mp3" loop></audio>
           <button class="play-button">
-            <p>Relax 3</p>
+            <p>Binaural Sound</p>
             <p class="playbtn">Play</p>
           </button>
         </article>
         <article>
           <audio id="audio4" src="src/sounds/rain.mp3" loop></audio>
           <button class="play-button">
-            <p>Rain</p>
+            <p>Rain Sound</p>
             <p class="playbtn">Play</p>
           </button>
         </article>
         <article>
           <audio id="audio5" src="src/sounds/waves.mp3" loop></audio>
           <button class="play-button">
-            <p>Waves</p>
+            <p>Waves Sound</p>
             <p class="playbtn">Play</p>
           </button>
         </article>
         <article>
-          <audio id="audio6" src="src/sounds/BreathInOut.mp3" loop></audio>
+          <audio id="audio6" src="src/sounds/meditation.mp3" loop></audio>
           <button class="play-button">
-            <p>Breathing Guide</p>
+            <p>Meditation Music</p>
             <p class="playbtn">Play</p>
           </button>
         </article>
