--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
     <title>Modulos de Respiración</title>
   </head>
   <body>
@@ -86,9 +90,21 @@
     </main>
 
     <footer>
-      <ul class="autor">
-        <li>Developed by Thalia Olvera 2024</li>
-      </ul>
+      <div class="footer-container">
+        <p>Desarrollado por Thalia Olvera 2024</p>
+        <ul class="social-links">
+          <li>
+            <a href="https://github.com/ThaliaOlvera" target="_blank"
+              ><i class="fab fa-github"></i> Github</a
+            >
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/thalia-olvera/" target="_blank"
+              ><i class="fab fa-linkedin"></i> LinkedIn</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
     <script src="script.js"></script>
   </body>
