Fix: Modal Image

--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
             alt="Cancel Icon"
           />
         </div>
-        <p>
-          Para disfrutar mejor de la experiencia, te recomendamos usar
-          audífonos.
-        </p>
+        <p>Use your headphones.</p>
         <div>
           <img
             class="headphonesIcon"
@@ -91,7 +88,7 @@
 
     <footer>
       <div class="footer-container">
-        <p>Desarrollado por Thalia Olvera 2024</p>
+        <p>Developed By Thalia Olvera 2024</p>
         <ul class="social-links">
           <li>
             <a href="https://github.com/ThaliaOlvera" target="_blank"
