Fix: Circle Animation

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
             alt="Cancel Icon"
           />
         </div>
-        <p>Use your headphones.</p>
-        <div>
-          <img
-            class="headphonesIcon"
-            src="src/img/headphones.png"
-            alt="headphones ico "
-          />
+        <div class="headphonesIcon_container">
+          <div>
+            <img
+              class="headphonesIcon"
+              src="src/img/headphones.png"
+              alt="headphones ico "
+            />
+          </div>
+          <p>Use your headphones.</p>
         </div>
       </div>
     </div>
