--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
     />
     <title>Modulos de Respiración</title>
   </head>
+
   <body>
+    <input
+      type="checkbox"
+      name="dark-mode"
+      id="dark-mode"
+      class="toggle"
+      role="switch"
+    />
+    <label for="dark-mode" class="sr">Dark Mode</label>
+    <div class="curtain"></div>
     <div id="modal" class="modal">
       <div class="modal-content">
         <div class="cancel-container">
