--- a/index.html
+++ b/index.html
@@ -12,15 +12,10 @@
   </head>
 
   <body>
-    <input
-      type="checkbox"
-      name="dark-mode"
-      id="dark-mode"
-      class="toggle"
-      role="switch"
-    />
-    <label for="dark-mode" class="sr">Dark Mode</label>
-    <div class="curtain"></div>
+    <div id="toggle">
+      <i class="indicator"></i>
+    </div>
+
     <div id="modal" class="modal">
       <div class="modal-content">
         <div class="cancel-container">
